Verzia updateru 0.0.1